Updated DESCRIPTION details and dependencies.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,18 @@
 Package: winpasteR
-Title: What the Package Does (One Line, Title Case)
+Title: RStudio Addin that Allows Pasting of Windows File Paths.
 Version: 0.0.0.9000
 Authors@R: 
-    person(given = "First",
-           family = "Last",
+    person(given = "Charles T.",
+           family = "Horgan IV",
            role = c("aut", "cre"),
-           email = "first.last@example.com",
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+           email = "chorgan182@gmail.com")
+Description: RStudio Addin that makes it easy to paste Windows file paths
+copied from the file explorer. Replaces the backslashes in Windows paths
+with forward slashes that are used in R paths.
+License: use_mit_license()
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
+Imports: 
+    rstudioapi (>= 0.13)
